--- a/.htaccess
+++ b/.htaccess
@@ -13,13 +13,16 @@ RewriteBase /
 # add a slash and redirect
 # Ex: /a/b/someresource --> /a/b/someresource/
 # Ex: /a/b/someresource.ext --> no change, there's an extension
-RewriteRule ^([^.]+[^/])$ $1/ [R=permanent,L]
+# RewriteRule ^([^.]+[^/])$ $1/ [R=permanent,L]
 
 # If the request isn't a folder, and there's a .py that matches
 # the last part of the path, redirect to that.
 # Ex: /a/b/something/ --> a/b/something.py
 RewriteCond %{DOCUMENT_ROOT}controllers/$1.py -f
 RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}controllers/$1.py [L]
+
+RewriteCond %{DOCUMENT_ROOT}static/$1 -f
+RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}static/$1
 
 # If the request isn't a folder, and there's an .html that matches
 # the last part of the path, redirect to that.
