Added a directory index

--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,20 @@
 allow from all
-Options +Indexes
+Options -Indexes
 AddHandler mod_python .py
 PythonHandler lib.page_handler
 PythonDebug On
 PythonPath "sys.path+['/home/philippp/pychee']"
 
+DirectoryIndex /static/index.html
+
 RewriteEngine On
-# Rewrite all URLs requested from the server
 RewriteBase /
 
 # If the request doesn't include a dot and doesn't have a slash at the end,
 # add a slash and redirect
 # Ex: /a/b/someresource --> /a/b/someresource/
 # Ex: /a/b/someresource.ext --> no change, there's an extension
-# RewriteRule ^([^.]+[^/])$ $1/ [R=permanent,L]
+# RewriteRule ^([^.?]+[^/])$ $1/ [R=permanent,L]
 
 # If the request isn't a folder, and there's a .py that matches
 # the last part of the path, redirect to that.
@@ -22,7 +23,7 @@ RewriteCond %{DOCUMENT_ROOT}controllers/$1.py -f
 RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}controllers/$1.py [L]
 
 RewriteCond %{DOCUMENT_ROOT}static/$1 -f
-RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}static/$1
+RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}static/$1 [L]
 
 # If the request isn't a folder, and there's an .html that matches
 # the last part of the path, redirect to that.
