--- a/.htaccess
+++ b/.htaccess
@@ -20,7 +20,7 @@ RewriteBase /
 # the last part of the path, redirect to that.
 # Ex: /a/b/something/ --> a/b/something.py
 RewriteCond %{DOCUMENT_ROOT}controllers/$1.py -f
-RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}controllers/$1.py [L]
+RewriteRule ^([^/]+)(?=.+?) %{DOCUMENT_ROOT}controllers/$1.py [L]
 
 RewriteCond %{DOCUMENT_ROOT}static/$1 -f
 RewriteRule ^(.+[^/]) %{DOCUMENT_ROOT}static/$1 [L]
