--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ AddHandler mod_python .py
 PythonHandler lib.page_handler
 PythonDebug On
 PythonPath "sys.path+['/home/philippp/pychee']"
-SetEnvIfNoCase PYCHEE_END_URI .+ PYCHEE_END_URI=""
+#SetEnvIfNoCase PYCHEE_END_URI .+ PYCHEE_END_URI=""
 DirectoryIndex /static/index.html
 
 RewriteEngine On
